authzen-api/kubernetes/istio-integration/extension-provider.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: authzen-ext-authz-filter
  namespace: istio-system
spec:
  configPatches:
  - applyTo: EXTENSION_CONFIG
    match:
      context: GATEWAY
    patch:
      operation: ADD
      value:
        name: authzen-ext-authz
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
          transport_api_version: V3
          with_request_body:
            max_request_bytes: 8192
            allow_partial_message: true
          failure_mode_allow: false
          grpc_service:
            envoy_grpc:
              cluster_name: outbound|8080||authzen-api.default.svc.cluster.local
            timeout: 10s
          status_on_error:
            code: InternalServerError
